--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-	<link rel="shortcut icon" href="neons.png" type="image/png" />
+    <link rel="shortcut icon" href="menu.png" type="image/png" />
     <title>UIGrids</title>
 </head>
+
 <body>
     <div class="container">
-      <h3 class="byline">Complementing and enhancing</h3>
-      <h1 class="grid-systems">The Self</h1>
-      <h3 class="in-graphic">A different perspective</h3>
-      <h3 class="visual-comm">A visual communication grid mockup for graphic designers, programmers and </br>three dimensional designers</h3>
-    <h1 class="raster-systeme">Grid Systems</h1>
-    <h3 class="fur-die">Organize</br>the needed data</h3>
-      <h3 class="ein-hand">Product specifics, typography and user interface design</h3>
-    <h3 class="verlag">Your branding</br>is our passion</h3>
-      <div class="col-1"></div>
-      <div class="col-2"></div>
-      <div class="col-3"></div>
-      <div class="col-4"></div>
-      <div class="row-1"></div>
-      <div class="row-2"></div>
-      <div class="row-3"></div>
-      <div class="row-4"></div>
-      <div class="row-5"></div>
-      <div class="row-6"></div>
-      <div class="row-7"></div>
-      <div class="row-8"></div>
+        <h3 class="byline">Complementing and enhancing</h3>
+        <h1 class="grid-systems">The Self</h1>
+        <h3 class="in-graphic">A different perspective</h3>
+        <h3 class="visual-comm">A visual communication grid mockup for graphic designers, programmers and </br>three
+            dimensional designers</h3>
+        <h1 class="raster-systeme">Grid Systems</h1>
+        <h3 class="fur-die">Organize</br>the needed data</h3>
+        <h3 class="ein-hand">Product specifics, typography and user interface design</h3>
+        <h3 class="verlag">Your branding</br>is our passion</h3>
+        <div class="col-1"></div>
+        <div class="col-2"></div>
+        <div class="col-3"></div>
+        <div class="col-4"></div>
+        <div class="row-1"></div>
+        <div class="row-2"></div>
+        <div class="row-3"></div>
+        <div class="row-4"></div>
+        <div class="row-5"></div>
+        <div class="row-6"></div>
+        <div class="row-7"></div>
+        <div class="row-8"></div>
     </div>
-  </body>
+</body>
+
 </html>
